# quest

./: .gitignore  .kobold  justfile  kobold.py  pyproject.toml  quest.py  readme.md  rofi_kobold.sh
docs/: conf.py  index.md  quickstart.md
docs/source/: conf.py  index.md  index.rst
kobold/: __init__.py  achievement.py  configuration.py  dateutils.py  filters.py  output.py  tag.py  task.py  taskdb.py  trello.py
kobold/output/: calendar.py  lists.py
quest/: __init__.py  cli.py  configuration.py  date_utils.py  filters.py  task.py  taskdb.py  trello.py
quest/output/: __init__.py  calendar.py  lists.py
tests/: context.py  test_tag.py  test_task.py  test_task_db.py  test_taskdb.py
tests/dbs/: simple_db.kob
