[project]
name = "quest"

[tool.poetry]
name = "quest"
version = "2020.6.0"
description = "Yet another CLI todo manager."
authors = ["Hristo Filaretov <h.filaretov@campus.tu-berlin.de>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^0.15"
PyYaml = "^5.3.1."
rich = "^2.2.3"
typer = "^0.2.1"

[tool.poetry.scripts]
quest = 'quest.cli:run'

[tool.black]
line-length = 90
target_version = ['py38']

