[tool.poetry]
name = "quest"
version = "2020.6.10"
description = "A commandline quest log."
authors = ["Hristo Filaretov <h.filaretov@campus.tu-berlin.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^0.15.6"
rich = "^2.2.3"
typer = "^0.2.1"
pyyaml = "^5.3.1"
xdg = "^4.0.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
ipython = "^7.15.0"

[tool.poetry.scripts]
quest = "quest.cli:run"

[tool.black]
line-length = 90
target_version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

